fix flex wrap for small screens

--- a/style.css
+++ b/style.css
@@ -14,11 +14,17 @@ body {
 .container {
   max-width: 800px;
   margin: 60px auto;
+  padding: 15px;
 }
 
 .product {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
+}
+
+.product > * {
+  margin: 10px;
 }
 
 .product__img img {
